@@ -2,29 +2,35 @@ package spring.webmvc.infrastructure.persistence.dto;
 
 import java.util.List;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 public record CursorPage<T>(
 	List<T> content,
-	int size,
-	boolean hasNext,
+	Long size,
+	Boolean hasNext,
 	Long nextCursorId
 ) {
+	public static <T> CursorPage<T> create(List<T> content, Long size, Function<T, Long> getCursorId) {
+		List<T> actualContent;
+		Long cursorId;
+		boolean hasNextPage = content.size() > size;
 
-	public CursorPage(List<T> content, int size, Function<T, Long> getCursorId) {
-		this(
-			content.size() > size ? content.subList(0, content.size() - 1) : content,
-			size,
-			content.size() > size,
-			content.size() > size ? getCursorId.apply(content.getLast()) : null
-		);
+		if (hasNextPage) {
+			actualContent = content.subList(0, content.size() - 1);
+			cursorId = getCursorId.apply(content.getLast());
+		} else {
+			actualContent = content;
+			cursorId = null;
+		}
+
+		return new CursorPage<>(actualContent, size, hasNextPage, cursorId);
 	}
 
 	public <U> CursorPage<U> map(Function<T, U> transform) {
-		return new CursorPage<>(
-			content.stream().map(transform).toList(),
-			size,
-			hasNext,
-			nextCursorId
-		);
+		List<U> mappedContent = content.stream()
+			.map(transform)
+			.collect(Collectors.toList());
+
+		return new CursorPage<>(mappedContent, size, hasNext, nextCursorId);
 	}
 }
